--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/GLTFLoader.js"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- Favicon affiché dans l’onglet du navigateur -->
+    <link rel="icon" href="/assets/img/logo.jpg" type="image/jpg" />
+
+    <!-- Image pour les réseaux sociaux (Facebook, Twitter, etc.) -->
+    <meta property="og:image" content="https://www.madarom.net/assets/img/logo.jpg" />
+    <meta name="twitter:image" content="https://www.madarom.net/assets/img/logo.jpg" />
+
+    <!-- Logo officiel pour les moteurs de recherche (Google) -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "url": "https://www.madarom.net",
+            "logo": "https://www.madarom.net/assets/img/logo.jpg"
+        }
+    </script>
+
+
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             AOS.init({
