--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
           <p class="italic text-3xl md:text-4xl max-w-3xl mx-auto font-sans font-bold tracking-wide text-white mb-6">
             Madagascar Aromatics and Fragrances Products
           </p>
-          <button class="btn-primary text-white px-8 py-3 rounded-full font-medium text-lg glow-effect hover:bg-opacity-90 transition duration-300">
+          <a href="#products"><button class="btn-primary text-white px-8 py-3 rounded-full font-medium text-lg glow-effect hover:bg-opacity-90 transition duration-300">
             Discover Our Products
-          </button>
+          </button></a>
         </div>
       
         <!-- FOOTER INFO -->
