--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mad'arom - Huiles essentielles & Épices de Madagascar</title>
-    <meta name="description" content="Découvrez les huiles essentielles et épices naturelles de Madagascar : ylang-ylang, ravintsara, cannelle, poivre, girofle. Qualité artisanale signée Mad’arom." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Mad'arom – Producteur d’huiles essentielles & épices de Madagascar</title>
+    <meta name="description" content="Mad'arom, producteur et exportateur d’huiles essentielles naturelles et épices fines de Madagascar : ravintsara, ylang-ylang, girofle, eucalyptus et plus." />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -86,7 +85,7 @@
         <!-- CONTENU PAR-DESSUS -->
         <div class="relative z-10 max-w-xl text-center px-4" data-aos="zoom-in-up">
           <h1 class="italic text-3xl md:text-4xl max-w-3xl mx-auto font-sans font-bold tracking-wide text-white mb-6">
-            Produits aromatiques et parfumés de Madagascar.
+            Producteur d’huiles essentielles et d’épices de Madagascar
           </h1>
           <a href="#products"><button class="btn-primary text-white px-8 py-3 rounded-full font-medium text-lg glow-effect hover:bg-opacity-90 transition duration-300">
             Découvrez nos produits
@@ -118,12 +117,17 @@
         <!-- About Section Modern -->
         <section id="about" class="py-24 bg-gray-50">
             <div class="max-w-5xl mx-auto px-6">
-              <div class="text-center mb-12">
-                <h2 class="text-4xl md:text-5xl font-extrabold text-gray-800 mb-4">Notre Histoire</h2>
-                <p class="text-gray-600 max-w-2xl mx-auto text-lg">
-                  Depuis 2010, Mad'arom est un producteur et exportateur passionné d’épices fines et d’huiles essentielles de Madagascar. Nous mettons un point d’honneur à valoriser le riche patrimoine botanique malgache grâce à des pratiques durables et respectueuses de l’environnement.
-                </p>
-              </div>
+                <div class="text-center mb-12">
+                    <h2 class="text-4xl md:text-5xl font-extrabold text-gray-800 mb-4">Notre Histoire</h2>
+                    <p class="text-gray-600 max-w-2xl mx-auto text-lg">
+                      Depuis 2010, Mad'arom est un producteur et exportateur reconnu d’huiles essentielles et d’épices de Madagascar.  
+                      Nous cultivons et distillons des plantes aromatiques comme le ravintsara, l’ylang-ylang, l’eucalyptus, ainsi que des épices fines telles que le girofle et la cannelle.  
+                      Notre engagement : garantir la qualité pure, naturelle et artisanale de nos produits tout en respectant la biodiversité et les communautés locales.  
+                      Nos huiles essentielles, comme le ravintsara ou l’ylang-ylang, sont très prisées pour leurs vertus thérapeutiques et leurs parfums uniques.  
+                      En tant que producteur et exportateur, Mad'arom assure un approvisionnement durable et un contrôle strict de la qualité, pour vous offrir le meilleur de Madagascar.
+                    </p>
+                </div>
+                  
           
               <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
                 <div class="bg-white p-6 rounded-2xl shadow-sm hover:shadow-md transition duration-300">
