--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@
         <section id="about" class="py-24 bg-gray-50">
             <div class="max-w-5xl mx-auto px-6">
                 <div class="text-center mb-12">
-                    <h2 class="text-4xl md:text-5xl font-extrabold text-gray-800 mb-4">Notre Histoire</h2>
+                    <h2 class="text-4xl md:text-5xl font-extrabold text-gray-800 mb-4">Huiles Essentielles & Épices de Madagascar</h2>
                     <p class="text-gray-600 max-w-2xl mx-auto text-lg">
-                      Depuis 2010, Mad'arom est un producteur et exportateur reconnu d’huiles essentielles et d’épices de Madagascar.  
-                      Nous cultivons et distillons des plantes aromatiques comme le ravintsara, l’ylang-ylang, l’eucalyptus, ainsi que des épices fines telles que le girofle et la cannelle.  
-                      Notre engagement : garantir la qualité pure, naturelle et artisanale de nos produits tout en respectant la biodiversité et les communautés locales.  
-                      Nos huiles essentielles, comme le ravintsara ou l’ylang-ylang, sont très prisées pour leurs vertus thérapeutiques et leurs parfums uniques.  
-                      En tant que producteur et exportateur, Mad'arom assure un approvisionnement durable et un contrôle strict de la qualité, pour vous offrir le meilleur de Madagascar.
+                      Mad'arom est un producteur et exportateur spécialisé dans les huiles essentielles et les épices fines de Madagascar.  
+                      Nous offrons une large gamme de produits naturels, notamment l’<strong>huile essentielle de ravintsara</strong>, l’<strong>ylang-ylang</strong>, l’<strong>eucalyptus</strong>, ainsi que des épices renommées telles que le <strong>girofle</strong> et la <strong>cannelle</strong>.  
+                      Nos huiles essentielles sont extraites avec soin selon des méthodes artisanales, garantissant pureté et qualité thérapeutique.  
+                      Nos épices, issues d’une agriculture responsable, apportent les saveurs authentiques et uniques du terroir malgache.  
+                      En tant que producteur et exportateur, Mad'arom s'engage à préserver la biodiversité locale tout en assurant un approvisionnement durable et une traçabilité rigoureuse de chaque lot.  
+                      Découvrez le meilleur de Madagascar à travers nos produits aromatiques et parfumés, parfaits pour les usages thérapeutiques, culinaires ou cosmétiques.
                     </p>
-                </div>
+                  </div>
                   
-          
               <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
                 <div class="bg-white p-6 rounded-2xl shadow-sm hover:shadow-md transition duration-300">
                   <h3 class="text-xl font-semibold text-teal mb-2">Approvisionnement Éthique</h3>
