--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Mad'arom – Producteur d’huiles essentielles & épices de Madagascar</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mad'arom - Huiles essentielles & épices de Madagascar</title>
     <meta name="description" content="Mad'arom, producteur et exportateur d’huiles essentielles naturelles et épices fines de Madagascar : ravintsara, ylang-ylang, girofle, eucalyptus et plus." />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
