--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         <!-- About Section Modern -->
         <section id="about" class="py-24 bg-gray-50">
             <div class="max-w-5xl mx-auto px-6">
-                <div class="text-center mb-12">
-                    <h2 class="text-4xl md:text-5xl font-extrabold text-gray-800 mb-4">Huiles Essentielles & Épices de Madagascar</h2>
+                <div class="mb-12">
+                    <h2 class="text-4xl md:text-5xl font-extrabold text-gray-800 mb-4 text-center" >Huiles Essentielles & Épices de Madagascar</h2>
                     <p class="text-gray-600 max-w-2xl mx-auto text-lg">
                       Mad'arom est un producteur et exportateur spécialisé dans les huiles essentielles et les épices fines de Madagascar.  
                       Nous offrons une large gamme de produits naturels, notamment l’<strong>huile essentielle de ravintsara</strong>, l’<strong>ylang-ylang</strong>, l’<strong>eucalyptus</strong>, ainsi que des épices renommées telles que le <strong>girofle</strong> et la <strong>cannelle</strong>.  
