--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <!-- About Section Modern -->
         <section id="about" class="py-24 bg-gray-50">
             <div class="max-w-5xl mx-auto px-6">
-                <div class="mb-12">
+                <div class="">
                     <h2 class="text-4xl md:text-5xl font-extrabold text-gray-800 mb-4 text-center" >Huiles Essentielles & Épices de Madagascar</h2>
                     <p class="text-gray-600 max-w-2xl mx-auto text-lg">
                       Mad'arom est un producteur et exportateur spécialisé dans les huiles essentielles et les épices fines de Madagascar.  
