--- a/index.html
+++ b/index.html
@@ -136,16 +136,16 @@
             <!-- Images / Icônes à droite -->
             <div class="md:w-1/2 grid grid-cols-2 gap-6">
               <div class="rounded-xl overflow-hidden shadow-lg">
-                <img src="./assets/img/huile-ravintsara.jpg" alt="Huile essentielle de ravintsara" class="w-full h-48 object-cover" />
+                <img src="./assets/img/huile-ravintsara.jpeg" alt="Huile essentielle de ravintsara" class="w-full h-48 object-cover" />
               </div>
               <div class="rounded-xl overflow-hidden shadow-lg">
-                <img src="./assets/img/epices-girofle.jpg" alt="Épices de girofle" class="w-full h-48 object-cover" />
+                <img src="./assets/img/epices-girofle.jpeg" alt="Épices de girofle" class="w-full h-48 object-cover" />
               </div>
               <div class="rounded-xl overflow-hidden shadow-lg">
-                <img src="./assets/img/huile-ylang.jpg" alt="Huile essentielle d’ylang-ylang" class="w-full h-48 object-cover" />
+                <img src="./assets/img/huile-ylang.jpeg" alt="Huile essentielle d’ylang-ylang" class="w-full h-48 object-cover" />
               </div>
               <div class="rounded-xl overflow-hidden shadow-lg">
-                <img src="./assets/img/epices-cannelle.jpg" alt="Épices de cannelle" class="w-full h-48 object-cover" />
+                <img src="./assets/img/epices-cannelle.jpeg" alt="Épices de cannelle" class="w-full h-48 object-cover" />
               </div>
             </div>
           </div>
