--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/GLTFLoader.js"></script>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/min/style.min.css">
     <link rel="icon" href="/assets/img/logo.jpg" type="image/jpg" />
     <meta property="og:image" content="https://www.madarom.net/assets/img/logo.jpg" />
     <meta name="twitter:image" content="https://www.madarom.net/assets/img/logo.jpg" />
@@ -370,8 +370,8 @@
     </footer>
   
 
-    <script src="./assets/js/script.js"></script>
-    <script src="./assets/js/get_api.js"></script>
+    <script src="./assets/js/min/script.min.js"></script>
+    <script src="./assets/js/min/get_api.min.js"></script>
 
 </body>
 </html>
