--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
   
 
     <script src="./assets/js/min/script.min.js"></script>
-    <script src="./assets/js/min/get_api.min.js"></script>
+    <script src="./assets/js/get_api.js"></script>
 
 </body>
 </html>
