--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Huiles essentielles & épices de Madagascar</title>
+    <title>Bienvenue sur Madarom.net</title>
     
     <meta name="description" content="Mad'arom, producteur et exportateur d’huiles essentielles naturelles et d’épices fines de Madagascar : ravintsara, ylang-ylang, girofle, eucalyptus et plus.">
     <meta name="keywords" content="huiles essentielles Madagascar, épices Madagascar, ravintsara, ylang-ylang, girofle, exportateur huiles essentielles, Mad'arom, huiles naturelles, cannelle, eucalyptus">
