--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta property="og:image" content="https://www.madarom.net/assets/img/logo.png">
     <meta property="og:url" content="https://www.madarom.net">
     <meta property="og:type" content="website">
+    <meta name="msvalidate.01" content="XXXXXXX" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
