--- a/index.html
+++ b/index.html
@@ -285,14 +285,14 @@
             <!-- Contact -->
             <div class="space-y-5">
             <h3 class="text-xl font-semibold border-b border-white/30 pb-2" data-aos="fade-right" data-aos-delay="100">Email & Téléphone</h3>
-            <p data-aos="fade-right" data-aos-delay="150"><i class="fas fa-envelope mr-3 text-white"></i> contact@madarom.com</p>
-            <p data-aos="fade-right" data-aos-delay="250"><i class="fas fa-phone-alt mr-3 text-white"></i> +261 20 22 222 22</p>
+            <p data-aos="fade-right" data-aos-delay="150"><i class="fas fa-envelope mr-3 text-white"></i> madarom.madagascar@gmail.com</p>
+            <p data-aos="fade-right" data-aos-delay="250"><i class="fas fa-phone-alt mr-3 text-white"></i> +261 34 45 999 69</p>
             </div>
     
             <!-- Location -->
             <div class="space-y-5">
             <h3 class="text-xl font-semibold border-b border-white/30 pb-2" data-aos="fade-right" data-aos-delay="300">Adresse</h3>
-            <p data-aos="fade-right" data-aos-delay="350"><i class="fas fa-map-marker-alt mr-3 text-white"></i> Lot II M 47 Ter, Antsakaviro</p>
+            <p data-aos="fade-right" data-aos-delay="350"><i class="fas fa-map-marker-alt mr-3 text-white"></i> Lot 73 D Amdombotany Ankadykely Ilafy</p>
             <p data-aos="fade-right" data-aos-delay="400">Antananarivo 101, Madagascar</p>
             </div>
     
