--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <!-- Contact -->
             <div class="space-y-5">
             <h3 class="text-xl font-semibold border-b border-white/30 pb-2" data-aos="fade-right" data-aos-delay="100">Email & Téléphone</h3>
-            <p data-aos="fade-right" data-aos-delay="150"><i class="fas fa-envelope mr-3 text-white"></i> madarom.madagascar@gmail.com</p>
+            <p data-aos="fade-right" data-aos-delay="150"><i class="fas fa-envelope mr-3 text-white"></i> contact@madarom.net</p>
             <p data-aos="fade-right" data-aos-delay="250"><i class="fas fa-phone-alt mr-3 text-white"></i> +261 34 45 999 69</p>
             </div>
     
