--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
             <!-- Card 1 -->
             <div class="bg-white p-6 rounded-2xl shadow-sm hover:shadow-md transition duration-300 text-center">
-              <img src="./assets/img/ethique.jpg" alt="Approvisionnement Éthique" class="mx-auto mb-4 w-16 h-16 object-contain" />
+              <img src="./assets/img/ethique.jpg" alt="Approvisionnement Éthique" class="mx-auto mb-4 object-contain" />
               <h3 class="text-xl font-semibold text-teal mb-4">Approvisionnement Éthique</h3>
               <p class="text-gray-700 text-sm">
                 Collaboration avec les agriculteurs locaux pour garantir rémunérations justes et récolte responsable, préservant la biodiversité unique de Madagascar.
@@ -180,7 +180,7 @@
             </div>
           
             <div class="bg-white p-6 rounded-2xl shadow-sm hover:shadow-md transition duration-300 text-center">
-              <img src="./assets/img/science.webp" alt="Excellence Scientifique" class="mx-auto mb-4 w-16 h-16 object-contain" />
+              <img src="./assets/img/science.webp" alt="Excellence Scientifique" class="mx-auto mb-4 object-contain" />
               <h3 class="text-xl font-semibold text-teal mb-4">Excellence Scientifique</h3>
               <p class="text-gray-700 text-sm">
                 Méthodes de distillation alliant savoir-faire ancestral et technologies modernes pour des huiles essentielles pures et thérapeutiques.
@@ -188,7 +188,7 @@
             </div>
           
             <div class="bg-white p-6 rounded-2xl shadow-sm hover:shadow-md transition duration-300 text-center">
-              <img src="./assets/img/quality.jpg" alt="Garantie de Qualité" class="mx-auto mb-4 w-16 h-16 object-contain" />
+              <img src="./assets/img/quality.jpg" alt="Garantie de Qualité" class="mx-auto mb-4 object-contain" />
               <h3 class="text-xl font-semibold text-teal mb-4">Garantie de Qualité</h3>
               <p class="text-gray-700 text-sm">
                 Tests rigoureux en laboratoire assurant pureté, puissance et authenticité — de nos plantations jusqu’à vos mains.
