--- a/index.html
+++ b/index.html
@@ -172,7 +172,10 @@
 
             <!-- Card 1 -->
             <div class="bg-white p-6 rounded-2xl shadow-sm hover:shadow-md transition duration-300 text-center flex flex-col">
-              <img src="./assets/img/ethique.jpg" alt="Approvisionnement Éthique"
+              <div class="rounded-none shadow-sm hover:shadow-md transition duration-300">
+                <img src="./assets/img/ethique.jpg" alt="Approvisionnement Éthique"
+                     class="w-full h-64 object-cover" />
+              </div>
                    class="h-40 w-full object-cover rounded-t-2xl" />
               <h3 class="text-xl font-semibold text-teal my-4">Approvisionnement Éthique</h3>
               <p class="text-gray-700 text-sm">
