--- a/index.html
+++ b/index.html
@@ -313,12 +313,12 @@
             <div>
             <h3 class="text-xl font-semibold border-b border-white/30 pb-2 mb-5" data-aos="fade-right" data-aos-delay="450">Réseaux sociaux</h3>
             <div class="flex space-x-5">
-                <a href="#" class="w-12 h-12 flex items-center justify-center rounded-full bg-white/20 hover:bg-white/30 transition text-white text-lg" data-aos="fade-right" data-aos-delay="500">
+                <!-- <a href="#" class="w-12 h-12 flex items-center justify-center rounded-full bg-white/20 hover:bg-white/30 transition text-white text-lg" data-aos="fade-right" data-aos-delay="500">
                 <i class="fab fa-facebook-f"></i>
                 </a>
                 <a href="#" class="w-12 h-12 flex items-center justify-center rounded-full bg-white/20 hover:bg-white/30 transition text-white text-lg" data-aos="fade-right" data-aos-delay="550">
                   <i class="fab fa-instagram"></i>
-                </a>
+                </a> -->
                 <a href=" https://www.linkedin.com/company/madarom-madagascar/" class="w-12 h-12 flex items-center justify-center rounded-full bg-white/20 hover:bg-white/30 transition text-white text-lg" data-aos="fade-right" data-aos-delay="600">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
