--- a/index.html
+++ b/index.html
@@ -337,13 +337,13 @@
             <h3 class="logo-font text-2xl text-teal mb-4">Mad'arom</h3>
             <p class="text-gray-400 mb-4">Produits aromatiques et parfumés de Madagascar.</p>
             <div class="flex space-x-4">
-                <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 transition">
+                <!-- <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 transition">
                 <i class="fab fa-facebook-f"></i>
                 </a>
                 <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 transition">
                 <i class="fab fa-instagram"></i>
-                </a>
-                <a href="#" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 transition">
+                </a> -->
+                <a href="https://www.linkedin.com/company/madarom-madagascar/" class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-white/20 transition">
                 <i class="fab fa-linkedin-in"></i>
                 </a>
             </div>
