add image produit phare

--- a/index.html
+++ b/index.html
@@ -209,10 +209,18 @@
     
       <section>
         <div class="phare-container">
-          <div class="phare">1</div>
-          <div class="phare">2</div>
-          <div class="phare">3</div>
-          <div class="phare">4</div>
+          <div class="phare">1
+            <img src="./assets/img/p1.jpeg" alt="">
+          </div>
+
+          <div class="phare">1
+            <img src="./assets/img/p2.jpeg" alt="">
+          </div>
+
+          <div class="phare">1
+            <img src="./assets/img/p3.jpeg" alt="">
+          </div>
+
         </div>
       </section>
             
