--- a/index.html
+++ b/index.html
@@ -218,17 +218,17 @@
 
             <div class="flex-[1] hover:flex-[3] transition-all duration-500 relative max-w-[300px]">
               <img src="./assets/img/p1.jpeg" alt="Huile essentielle de géranium" class="w-full h-full object-cover opacity-70 rounded">
-              <p class="absolute bottom-4 left-4 text-white font-semibold text-sm">Huile essentielle de géranium</p>
+              <p class="absolute bottom-4 left-4 text-gray-600 font-semibold text-sm">Huile essentielle de géranium</p>
             </div>
 
             <div class="flex-[1] hover:flex-[3] transition-all duration-500 relative max-w-[300px]">
               <img src="./assets/img/p2.jpeg" alt="Huile essentielle de ylang" class="w-full h-full object-cover opacity-70 rounded">
-              <p class="absolute bottom-4 left-4 text-white font-semibold text-sm">Huile essentielle de ylang</p>
+              <p class="absolute bottom-4 left-4 text-gray-600 font-semibold text-sm">Huile essentielle de ylang</p>
             </div>
 
             <div class="flex-[1] hover:flex-[3] transition-all duration-500 relative max-w-[300px]">
               <img src="./assets/img/p3.jpeg" alt="Huile essentielle de niaouli" class="w-full h-full object-cover opacity-70 rounded">
-              <p class="absolute bottom-4 left-4 text-white font-semibold text-sm">Huile essentielle de niaouli</p>
+              <p class="absolute bottom-4 left-4 text-gray-600 font-semibold text-sm">Huile essentielle de niaouli</p>
             </div>
       
           </div>
