--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       
         <div class="flex items-center gap-6 max-w-7xl mx-auto">
       
-          <div class="flex overflow-hidden h-[200px] flex-grow max-w-[100%]">
+          <div class="flex overflow-hidden h-[200px] flex-grow max-w-[100%] phare-container">
 
             <div class="flex-[1] hover:flex-[3] transition-all duration-500 relative max-w-[300px]">
               <img src="./assets/img/p1.jpeg" alt="Huile essentielle de géranium" class="w-full h-full object-cover opacity-70 rounded">
