--- a/index.html
+++ b/index.html
@@ -218,21 +218,21 @@
           <div class="flex-1 hover:flex-[2.5] transition-all duration-500 relative rounded-xl shadow-md overflow-hidden bg-white">
             <img src="./assets/img/p1.jpeg" alt="Huile essentielle de géranium" class="w-full h-full object-cover opacity-80">
             <div class="absolute bottom-0 left-0 right-0 bg-white/80 p-3 text-center">
-              <p class="text-gray-800 font-semibold text-sm">Huile essentielle de géranium</p>
+              <p class="text-red font-semibold text-sm">Huile essentielle de géranium</p>
             </div>
           </div>
       
           <div class="flex-1 hover:flex-[2.5] transition-all duration-500 relative rounded-xl shadow-md overflow-hidden bg-white">
             <img src="./assets/img/p2.jpeg" alt="Huile essentielle de ylang" class="w-full h-full object-cover opacity-80">
             <div class="absolute bottom-0 left-0 right-0 bg-white/80 p-3 text-center">
-              <p class="text-gray-800 font-semibold text-sm">Huile essentielle de ylang</p>
+              <p class="text-red font-semibold text-sm">Huile essentielle de ylang</p>
             </div>
           </div>
       
           <div class="flex-1 hover:flex-[2.5] transition-all duration-500 relative rounded-xl shadow-md overflow-hidden bg-white">
             <img src="./assets/img/p3.jpeg" alt="Huile essentielle de niaouli" class="w-full h-full object-cover opacity-80">
             <div class="absolute bottom-0 left-0 right-0 bg-white/80 p-3 text-center">
-              <p class="text-gray-800 font-semibold text-sm">Huile essentielle de niaouli</p>
+              <p class="text-red font-semibold text-sm">Huile essentielle de niaouli</p>
             </div>
           </div>
         </div>
