--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             <nav class="hidden md:flex items-center space-x-8" data-aos="fade-down">
                 <a href="#" class="nav-link font-medium text-white transition-all duration-300 transform" data-aos="fade-down">Accueil</a>
-                <a href="#about" class="nav-link font-medium text-white transition-all duration-300 transform" data-aos="fade-down">A propos</a>
+                <a href="#about" class="nav-link font-medium text-white transition-all duration-300 transform" data-aos="fade-down">À propos</a>
                 <a href="#services" class="nav-link font-medium text-white transition-all duration-300 transform" data-aos="fade-down">Service</a>
                 <div class="relative group">
                   <button class="nav-link font-medium text-white flex items-center transition-all duration-300 transform" data-aos="fade-down">
@@ -196,7 +196,7 @@
                    class="h-40 w-full object-cover rounded-t-2xl" />
               <h3 class="text-xl font-semibold text-teal my-4">Garantie de Qualité</h3>
               <p class="text-gray-700 text-sm">
-                Tests rigoureux en laboratoire assurant pureté, puissance et authenticité — de nos plantations jusqu’à vos mains.
+                Tests rigoureux en laboratoire assurant pureté, puissance et authenticité de nos plantations jusqu’à vos mains.
               </p>
             </div>
           
@@ -210,7 +210,7 @@
       <section class="my-20 px-4 md:px-8">
         <!-- Titre -->
         <h2 class="text-3xl font-bold text-center text-gray-800 mb-12">
-          Our key products
+          Nos Produits Phares
         </h2>
       
         <div class="flex gap-6 max-w-7xl mx-auto h-[280px] overflow-hidden">
