--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </head>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3ZXNS9LBRR"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3ZXNS9LBRR');
+  </script>
+
 <body class="bg-white text-gray-800">
     <!-- Header -->
     <header class="fixed w-full bg-transparent bg-opacity-90 z-50 transform -translate-y-1 transition-all duration-500 ease-in-out">
