--- a/index.html
+++ b/index.html
@@ -342,31 +342,33 @@
             <p class="text-gray-700 mb-4">
               We offer tailored essential oil blending based on your wellness goals and scent preferences.
             </p>
-            <button onclick="toggleList(this)" class="text-sm text-teal-600 hover:underline focus:outline-none mb-2">
-              Learn more
-            </button>
-            <ul class="text-gray-700 list-disc pl-5 space-y-1 hidden transition-all duration-300 ease-in-out">
-              <li class="flex items-start gap-2">
-                <span class="text-teal-600 mt-1 font-bold">✓</span>
-                Personalized consultation with our master perfumers
-              </li>
-              <li class="flex items-start gap-2">
-                <span class="text-teal-600 mt-1 font-bold">✓</span>
-                Tailor-made blends for aromatherapy, skincare, or ambient fragrances
-              </li>
-              <li class="flex items-start gap-2">
-                <span class="text-teal-600 mt-1 font-bold">✓</span>
-                Private label solutions for wellness professionals
-              </li>
-              <li class="flex items-start gap-2">
-                <span class="text-teal-600 mt-1 font-bold">✓</span>
-                Custom scents for spas, hotels, and brands
-              </li>
-              <li class="flex items-start gap-2">
-                <span class="text-teal-600 mt-1 font-bold">✓</span>
-                Bulk and wholesale options for international export
-              </li>
-            </ul>
+            <div class="mt-auto">
+              <button onclick="toggleList(this)" class="text-sm text-teal-600 hover:underline focus:outline-none mb-2">
+                Learn more
+              </button>
+              <ul class="text-gray-700 list-disc pl-5 space-y-1 hidden transition-all duration-300 ease-in-out">
+                <li class="flex items-start gap-2">
+                  <span class="text-teal-600 mt-1 font-bold">✓</span>
+                  Personalized consultation with our master perfumers
+                </li>
+                <li class="flex items-start gap-2">
+                  <span class="text-teal-600 mt-1 font-bold">✓</span>
+                  Tailor-made blends for aromatherapy, skincare, or ambient fragrances
+                </li>
+                <li class="flex items-start gap-2">
+                  <span class="text-teal-600 mt-1 font-bold">✓</span>
+                  Private label solutions for wellness professionals
+                </li>
+                <li class="flex items-start gap-2">
+                  <span class="text-teal-600 mt-1 font-bold">✓</span>
+                  Custom scents for spas, hotels, and brands
+                </li>
+                <li class="flex items-start gap-2">
+                  <span class="text-teal-600 mt-1 font-bold">✓</span>
+                  Bulk and wholesale options for international export
+                </li>
+              </ul>
+            </div>
           </div>
 
           <!-- SERVICE ITEM -->
@@ -378,27 +380,30 @@
             <p class="text-gray-700 mb-4">
               Launch your brand with custom products and expert support.
             </p>
-            <button onclick="toggleList(this)" class="text-sm text-teal-600 hover:underline focus:outline-none mb-2">
-              Learn more
-            </button>
-            <ul class="text-gray-700 list-disc pl-5 space-y-1 hidden">
-              <li class="flex items-start gap-2">
-                <span class="text-teal-600 mt-1 font-bold">✓</span>
-                100% natural ingredients
-              </li>
-              <li class="flex items-start gap-2">
-                <span class="text-teal-600 mt-1 font-bold">✓</span>
-                Custom labels & packaging
-              </li>
-              <li class="flex items-start gap-2">
-                <span class="text-teal-600 mt-1 font-bold">✓</span>
-                Regulatory/export support
-              </li>
-              <li class="flex items-start gap-2">
-                <span class="text-teal-600 mt-1 font-bold">✓</span>
-                Small & large batch production
-              </li>
-            </ul>
+            <div class="mt-auto">
+
+              <button onclick="toggleList(this)" class="text-sm text-teal-600 hover:underline focus:outline-none mb-2 mt-auto">
+                Learn more
+              </button>
+              <ul class="text-gray-700 list-disc pl-5 space-y-1 hidden">
+                <li class="flex items-start gap-2">
+                  <span class="text-teal-600 mt-1 font-bold">✓</span>
+                  100% natural ingredients
+                </li>
+                <li class="flex items-start gap-2">
+                  <span class="text-teal-600 mt-1 font-bold">✓</span>
+                  Custom labels & packaging
+                </li>
+                <li class="flex items-start gap-2">
+                  <span class="text-teal-600 mt-1 font-bold">✓</span>
+                  Regulatory/export support
+                </li>
+                <li class="flex items-start gap-2">
+                  <span class="text-teal-600 mt-1 font-bold">✓</span>
+                  Small & large batch production
+                </li>
+              </ul>
+            </div>
           </div>
 
           <!-- SERVICE ITEM -->
@@ -410,31 +415,34 @@
             <p class="text-gray-700 mb-4">
               Ethical sourcing with traceability and community impact.
             </p>
-            <button onclick="toggleList(this)" class="text-sm text-teal-600 hover:underline focus:outline-none mb-2">
-              Learn more
-            </button>
-            <ul class="text-gray-700 list-disc pl-5 space-y-1 hidden">
-              <li class="flex items-start gap-2">
-                <span class="text-teal-600 mt-1 font-bold">✓</span>
-                Certified ethical suppliers
-              </li>
-              <li class="flex items-start gap-2">
-                <span class="text-teal-600 mt-1 font-bold">✓</span>
-                Traceable raw materials
-              </li>
-              <li class="flex items-start gap-2">
-                <span class="text-teal-600 mt-1 font-bold">✓</span>
-                Support for rural communities
-              </li>
-              <li class="flex items-start gap-2">
-                <span class="text-teal-600 mt-1 font-bold">✓</span>
-                Sustainable supply chains
-              </li>
-              <li class="flex items-start gap-2">
-                <span class="text-teal-600 mt-1 font-bold">✓</span>
-                Help with organic/fair trade certifications
-              </li>
-            </ul>
+            <div class="mt-auto">
+
+              <button onclick="toggleList(this)" class="text-sm text-teal-600 hover:underline focus:outline-none mb-2 mt-auto">
+                Learn more
+              </button>
+              <ul class="text-gray-700 list-disc pl-5 space-y-1 hidden">
+                <li class="flex items-start gap-2">
+                  <span class="text-teal-600 mt-1 font-bold">✓</span>
+                  Certified ethical suppliers
+                </li>
+                <li class="flex items-start gap-2">
+                  <span class="text-teal-600 mt-1 font-bold">✓</span>
+                  Traceable raw materials
+                </li>
+                <li class="flex items-start gap-2">
+                  <span class="text-teal-600 mt-1 font-bold">✓</span>
+                  Support for rural communities
+                </li>
+                <li class="flex items-start gap-2">
+                  <span class="text-teal-600 mt-1 font-bold">✓</span>
+                  Sustainable supply chains
+                </li>
+                <li class="flex items-start gap-2">
+                  <span class="text-teal-600 mt-1 font-bold">✓</span>
+                  Help with organic/fair trade certifications
+                </li>
+              </ul>
+            </div>
           </div>
 
         </div>
