--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             </div>
             <h3 class="text-xl font-semibold mb-3">Custom Blends</h3>
             <p class="text-gray-700 mb-4">
-              We offer tailored essential oil blending based on your wellness goals and scent preferences.
+              Tailored essential oil blends for your wellness and scent needs.
             </p>
             <div class="mt-auto">
               <button onclick="toggleList(this)" class="text-sm text-teal-600 hover:underline focus:outline-none mb-2">
